appId: com.idonagler.ShareBuy
env:
  USER_EMAIL: "testuser@example.com"
  USER_PASSWORD: "TestPass123!"
onFlowStart:
  - runFlow: actions/welcome.yml
  - runFlow: actions/login_from_welcome_page.yml
onFlowComplete:
  - runFlow: actions/logout.yml
  - runFlow: actions/closeApp.yml
---
# Test Purpose:
# Test if users can join a group and complete the payment process successfully.

# Preconditions:
# - User is logged in

- tapOn:
    point: "72%,34%"
- tapOn: ", Join Group"
- tapOn: "Proceed to Payment"
- tapOn:
    id: "android:id/button1"
- tapOn: ""
- tapOn: "Close"
- tapOn: "Proceed to Payment"
- tapOn:
    point: "50%,35%"
- inputText: "4242424242424242"
- inputText: "1227"
- inputText: "789"
- tapOn:
    point: "50%,57%"
- inputText: "12345"
- "hideKeyboard"
- tapOn:
    id: "com.idonagler.ShareBuy:id/primary_button"
- assertVisible:
    text: "Your payment was successful 🎉"
    index: 1
